--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/img/navBanner1.png" class="d-block w-100" alt="banner1">
+                    <div class="slide slide-1"></div>
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/navBanner2.png" class="d-block w-100" alt="banner2">
+                    <div class="slide slide-2"></div>
                 </div>
                 </div>
             </div>
@@ -191,7 +191,7 @@
         <div class="bookings">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-xl-6">
                         <div class="actividad">
                             <img class="logo mx-auto d-block" src="assets/img/logoBook1.png" alt="logoMultiaventura">
                             <h3 class="color">Te organizamos todas las actividades</h3>
@@ -207,7 +207,7 @@
                             </figure>
                         </div> 
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-xl-6">
                         <div class="actividad">
                             <img class="logo mx-auto d-block" src="assets/img/logoBook2.png" alt="booking2">
                             <h3 class="color">¿Ya sabes cuál es el restaurante Nº1 de Alcalá del Júcar?</h3>
